settings - current value

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,9 @@
     <!--    Settings - values are saved in preferences - don't change-->
     <string name="setting_team_color_scheme_color_1">Orange -- Blue</string>
     <string name="setting_team_color_scheme_color_2">Black -- White</string>
+    <string name="setting_title_divide_attempts">Divide attempts</string>
+    <string name="setting_title_grade_weight">Grade weight</string>
+    <string name="setting_title_color_scheme">Teams visualization - select color scheme</string>
 
     <!--    Messages-->
     <string name="parentheses">"(%1$d)"</string>
