--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,19 @@
     <string name="action_share">Share</string>
     <string name="action_enter_results">Enter results</string>
 
+    <!--    Navigation-->
+    <string name="nav_players">Players</string>
+    <string name="nav_games_history">Games History</string>
+    <string name="nav_statistics">Statistics</string>
+    <string name="nav_backup_to_file">Backup to file</string>
+    <string name="nav_import_from_file">Import from file</string>
+    <string name="nav_sync_to_cloud">Sync to cloud</string>
+    <string name="nav_pull_from_cloud">Pull from cloud</string>
+    <string name="nav_logout">Logout</string>
+    <string name="nav_settings">Settings</string>
+    <string name="nav_getting_started">Getting Started</string>
+    <string name="nav_about">About</string>
+
     <!--    Menus-->
     <string name="add_player">Add player</string>
     <string name="paste_players">Paste Players</string>
