--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <!--    App-->
     <string name="app_name">PeamTicker</string>
-    <string name="main_title">"PeamTicker - Team Picker"</string>
+    <string name="main_title">"Team Picker"</string>
     <string name="pick_teams_title">"Pick Teams"</string>
     <string name="pick_teams_title_results">"Results"</string>
     <string name="pick_teams_title_analysis">"Analysis"</string>
@@ -15,8 +15,10 @@
     <!--    Headlines-->
     <string name="name">Name</string>
     <string name="grade">Grade</string>
+    <string name="date">Date</string>
+    <string name="score">Score</string>
     <string name="grade_description">Grade (0-99)</string>
-    <string name="attributes">Attr</string>
+    <string name="attributes">Attributes</string>
     <string name="age">Age</string>
     <string name="age_description">Age (birth date)</string>
     <string name="plus_minus">+/-</string>
@@ -62,9 +64,9 @@
     <string name="show_archived">Players Archive</string>
     <string name="make_teams">Make teams</string>
     <string name="enter_results">Enter Results</string>
-    <string name="action_statistics_10">Last 10 games</string>
-    <string name="action_statistics_50">Last 50 games</string>
-    <string name="action_statistics_no_limit">All games</string>
+    <string name="action_10_games">Last 10 games</string>
+    <string name="action_50_games">Last 50 games</string>
+    <string name="action_all_games">All games</string>
 
     <!--    Settings - values are saved in preferences - don't change-->
     <string name="setting_team_color_scheme_color_1">Orange -- Blue</string>
@@ -96,7 +98,7 @@
     <string name="operation_divide_by_age">* Divide by age :)</string>
     <string name="operation_analysis">* Click the players for deeper analysis \n* Click icon to exit analysis mode</string>
     <string name="copy_players_success">Teams division applied</string>
-    <string name="main_make_teams">"Teams\n(%1$d players)"</string>
+    <string name="main_make_teams">"Teams (%1$d)"</string>
     <string name="main_auth_required">Google sign in required</string>
     <string name="main_sign_in">Sign in</string>
     <string name="main_login">Sign-in</string>
