--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="new_player">New Player</string>
     <string name="move_players">Move Players</string>
     <string name="shuffle">Shuffle Teams</string>
-    <string name="clear_all_coming">Clear coming</string>
+    <string name="clear_all_coming">Clear Attendance</string>
     <string name="action_send_statistics">Send Statistics</string>
     <string name="action_analysis">Analysis</string>
     <string name="action_share">Share</string>
@@ -59,10 +59,10 @@
     <string name="nav_about">About</string>
 
     <!--    Menus-->
-    <string name="add_player">Add player</string>
+    <string name="add_player">Add Player</string>
     <string name="paste_players">Paste Players</string>
     <string name="show_archived">Players Archive</string>
-    <string name="make_teams">Make teams</string>
+    <string name="make_teams">Pick Teams</string>
     <string name="enter_results">Enter Results</string>
     <string name="action_10_games">Last 10 games</string>
     <string name="action_50_games">Last 50 games</string>
