--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,13 +38,16 @@
     <string name="copy">Copy</string>
     <string name="delete">Delete</string>
     <string name="new_player">New Player</string>
-    <string name="move_players">Move Players</string>
-    <string name="shuffle">Shuffle Teams</string>
+    <string name="move_players">Transfer</string>
+    <string name="shuffle_age">By Age</string>
+    <string name="shuffle_grade">By Grade</string>
+    <string name="shuffle_stats">By Stats</string>
     <string name="clear_all_coming">Clear Attendance</string>
     <string name="action_send_statistics">Send Statistics</string>
     <string name="action_analysis">Analysis</string>
     <string name="action_share">Share</string>
-    <string name="action_enter_results">Enter results</string>
+    <string name="action_enter_results">Enter Results</string>
+    <string name="action_button_results">Results</string>
 
     <!--    Navigation-->
     <string name="nav_players">Players</string>
@@ -92,7 +95,7 @@
     <string name="player_analysis_selected">"(W:%1$02d%% G:%2$02d) [%3$s]"</string>
     <string name="player_analysis_selected_win_rate">"%1$02d%%"</string>
     <string name="player_analysis_selected_games">"%1$02d</string>
-    <string name="operation_move">* Click the players you want to move \n* Click icon to exit move mode</string>
+    <string name="operation_move">* Click players to change teams \n* Exit mode using the same icon</string>
     <string name="operation_divide_by_collaboration">* AI in progress :)</string>
     <string name="analysis_progress_update">"%1$d%% (%2$s)"</string>
     <string name="operation_divide_by_age">* Divide by age :)</string>
