--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,5 +132,7 @@
     <string name="tutorial_team_analysis_message">"Now, that enough game history is provided - click the \"Analysis\" icon at the top bar to observe individual win rates.\n\nClick a player to view their personal chemistry with the other participating players."</string>
     <string name="tutorial_team_shuffle_stats_title">Pick teams - AI mode</string>
     <string name="tutorial_team_shuffle_stats_message">"Switch to optimized team picking mode through the 3 dots below the \"Shuffle\" button.\n\nThe \"Stats\" mode will generate optional teams based on win rates, and players' chemistry"</string>
+    <string name="tutorial_completed_title">Tutorials Completed</string>
+    <string name="tutorial_completed_message">Tutorials will be available in the side menu under Getting Started</string>
 
 </resources>
