--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,13 +123,13 @@
     <string name="tutorial_start_pick_teams_title">Pick Teams</string>
     <string name="tutorial_start_pick_teams_message">"You can start picking the teams, just click the \"Teams\" button below"</string>
     <string name="tutorial_pick_teams_title">Pick Teams</string>
-    <string name="tutorial_pick_teams_message">"\"Shuffle\" teams based on grades.\n\n\"Transfer\" players manually.\n\nShare an image of the teams (excluding grades) through any messaging app."</string>
+    <string name="tutorial_pick_teams_message">"\"Shuffle\" teams based on grades.\n(you can select a different mode of shuffle by clicking on the 3 dots. It is not recommended to shuffle by stats before you have 10 games of data).\n\n\"Transfer\" players manually.\n\nShare an image of the teams (excluding grades) through any messaging app."</string>
     <string name="tutorial_save_results_title">Save game result</string>
     <string name="tutorial_save_results_message">"Entering the result of the game once it's over opens the way for game history, personal statistics, and the ability to pick teams based on win rate and players' chemistry.\n\nEnter \"Results\" in the \"Teams\" screen."</string>
     <string name="tutorial_game_history_title">Games History</string>
     <string name="tutorial_game_history_message">"Select any game in the "Games" tab to view its teams.\n\nLong click to copy the teams."</string>
     <string name="tutorial_cloud_title">Cloud Features</string>
-    <string name="tutorial_cloud_message">"Sync your players and games to the cloud, as backup, or when you plan to pull the data in another device.\n\nFirst, sign in with your Google account through the side drawer.\nThen \"Sync\" in the side drawer."</string>
+    <string name="tutorial_cloud_message">"Sync your players and games to the cloud, as backup, or when you plan to pull the data in another device.\n\nFirst, sign in with your Google account through the side menu.\nThen \"Sync\" in the side menu."</string>
     <string name="tutorial_team_analysis_title">Teams Analysis</string>
     <string name="tutorial_team_analysis_message">"Now, that enough game history is provided - click the \"Analysis\" icon at the top bar to observe individual win rates.\n\nClick a player to view their personal chemistry with the other participating players."</string>
     <string name="tutorial_team_shuffle_stats_title">Pick teams - AI mode</string>
