--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="setting_title_grade_weight">Grade Weight</string>
     <string name="setting_title_color_scheme">Teams visualization - select color scheme</string>
     <string name="setting_title_clear_tutorial">Reset Tutorials</string>
+    <string name="setting_title_show_grades">"Show players' grades"</string>
 
     <!--    Messages-->
     <string name="parentheses">"(%1$d)"</string>
