--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="copy">Copy</string>
     <string name="delete">Delete</string>
     <string name="new_player">New Player</string>
-    <string name="move_players">Transfers</string>
+    <string name="move_players">Transfers\n&amp; Bench</string>
     <string name="move_players_bench">"Transfers\n(%1$d benched)"</string>
     <string name="bench_players">Bench</string>
     <string name="shuffle_age">By Age</string>
@@ -51,8 +51,9 @@
     <string name="action_analysis">Analysis</string>
     <string name="action_share">Share</string>
     <string name="action_enter_results">Enter Results</string>
+    <string name="action_empty_bench">Empty Bench</string>
     <string name="action_button_results">Results</string>
-    <string name="teams_bench_title">Bench</string>
+    <string name="teams_bench_title">Bench (drop players here when they are not playing)</string>
 
     <!--    Navigation-->
     <string name="nav_players">Players</string>
@@ -107,7 +108,7 @@
     <string name="player_analysis_selected">"(W:%1$02d%% G:%2$02d) [%3$s]"</string>
     <string name="player_analysis_selected_win_rate">"%1$02d%%"</string>
     <string name="player_analysis_selected_games">"%1$02d</string>
-    <string name="operation_move">* Click players to change teams * Long press to bench</string>
+    <string name="operation_move">"Long press to drag and drop the player"</string>
     <string name="operation_divide_by_collaboration">* AI in progress :)</string>
     <string name="analysis_progress_update">"%1$d%% (%2$s)"</string>
     <string name="operation_analysis">* Click the players for deeper analysis \n* Click icon to exit analysis mode</string>
