Team colors - yellow-orange option

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,8 +85,10 @@
     <string name="stats_all_games">all games</string>
 
     <!--    Settings - values are saved in preferences - don't change-->
-    <string name="setting_team_color_scheme_color_1">Orange -- Blue</string>
-    <string name="setting_team_color_scheme_color_2">Black -- White</string>
+    <string name="setting_team_color_scheme_black_white">Black -- White</string>
+    <string name="setting_team_color_scheme_orange_blue">Orange -- Blue</string>
+    <string name="setting_team_color_scheme_orange_yellow">Orange -- Yellow</string>
+
     <string name="setting_title_divide_attempts">Divide Attempts</string>
     <string name="setting_summary_divide_attempts">Number of teams division to consider (1–200)</string>
     <string name="setting_title_grade_weight">Grade Weight</string>
@@ -96,7 +98,7 @@
     <string name="setting_title_clear_tutorial">Reset Tutorials</string>
     <string name="setting_summary_clear_tutorial">Reset tutorials skipped steps</string>
     <string name="setting_title_show_grades">Show Grades</string>
-    <string name="setting_summary_show_grades">Show players' grades</string>
+    <string name="setting_summary_show_grades">Show players grades</string>
     <string name="setting_title_auto_sync_games">Auto Sync</string>
     <string name="setting_summary_auto_sync_games">Automatically sync new games to cloud</string>
 
