--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,10 +186,17 @@
     <string name="insights_chip_activity">Participation</string>
 
     <!--    Player Collaboration Chart-->
-    <string name="insights_collaboration_title">Player Chemistry - With(x) VS Against(y)</string>
+    <string name="insights_collaboration_title">Collaboration - Success with players</string>
     <string name="insights_collaboration_no_data">Not enough collaboration data. Play at least %1$d games with other players.</string>
     <string name="insights_success_with_label">Success With</string>
     <string name="insights_success_against_label">Success Against</string>
+
+    <!--    Team Collaboration Chart (from teams screen) -->
+    <string name="team_collaboration_chart_title">%1$s - Team Collaboration</string>
+    <string name="team_collaboration_chart_title_with_games">%1$s - Team Collaboration (last %2$d games)</string>
+    <string name="team_collaboration_no_data">Not enough games with team members. Play at least %1$d games.</string>
+    <string name="team_collaboration_x_axis_label">Number of games</string>
+    <string name="team_collaboration_y_axis_label">Success</string>
 
     <!--    Player Participation Chart-->
     <string name="insights_participation_title">Participation Over Time</string>
