--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,13 @@
     <string name="games_vs">Games\nVs</string>
     <string name="success_with">Success\nWith</string>
     <string name="games_with">Games\nWith</string>
+    <string name="basic_info">Basic Info</string>
+    <string name="properties">Properties</string>
+    <string name="gk">GK</string>
+    <string name="defender">Defender</string>
+    <string name="playmaker">Playmaker</string>
+    <string name="unbreakable">Unbreakable</string>
+    <string name="extra">Extra</string>
 
     <!--    Buttons-->
     <string name="save">Save</string>
